# SWNSectorGenerator

./: .gitignore  README.md  pyproject.toml
resources/tables/: world_tags.schema.json  world_tags.yaml
schemas/: world_tags.schema.json
scripts/: README.md  migrate_world_tags.py
src/swn_sector_generator/: __init__.py  yaml_table_reader.py
src/swn_sector_generator/resources/tables/: world_tags.yaml
