[project]
name = "swn-sector-generator"
version = "0.1.0"
description = "Advanced sector generator for the Stars Without Number TTRPG"
readme = "README.md"

requires-python = ">=3.14"

dependencies = [
    "PyYAML==6.0.3",
]

[project.optional-dependencies]
dev = [
    "mypy==1.18.2",
    "pre-commit==4.3.0",
    "pymarkdownlnt==0.9.39",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "ruff==0.13.0",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
swn_sector_generator = [
    "resources/**/*",
]